<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <ImageButton
            android:id="@+id/activty_type_core"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/core_button_desc"
            android:scaleType="fitXY"
            android:src="@drawable/core_button_off"
        	android:layout_weight="1" />

        <ImageButton
            android:id="@+id/activty_type_mobility"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/mobility_button_desc"
            android:scaleType="fitXY"
            android:src="@drawable/mobility_button_off"
            android:layout_weight="1" />

    </LinearLayout>
    
   <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

	    <com.andrewfisher.abstretch.MyChronometer
	        android:id="@+id/chronometer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal|center_vertical"
	        android:text="@string/chronometer"
	        android:textSize="72sp" />
	    
	</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" 
        android:layout_gravity="center_horizontal" >
        
        <ImageButton
            android:id="@+id/action_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/startstop_desc"
            android:src="@drawable/start_button"
            android:layout_gravity="center_vertical" />
        
        <ImageButton
            android:id="@+id/finish_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/finish"
            android:src="@drawable/finish_button"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</LinearLayout>